--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -4,6 +4,7 @@ html(lang="en")
     title= Bootstrap
 
   body
+    .result
     script(type='text/javascript' src="assets/js/require.js")
     script(type='text/javascript').
       requirejs.config({
