hangman - last opti

--- a/hangman/src/jade/index.jade
+++ b/hangman/src/jade/index.jade
@@ -5,6 +5,7 @@ html(lang="en")
 
   body
     .result
+      p List of the Words :
     script(type='text/javascript' src="assets/js/require.js")
     script(type='text/javascript').
       requirejs.config({
